<resources>
    <string name="facebook_app_id">1798518337095257</string>

    <string name="app_name">SendU</string>
    <string name="app_name_up">SENDU</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="denied_message">If you reject permission, you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]</string>

    <string name="google_login">Login With Google</string>
    <string name="facebook_login">Login With Facebook</string>
    <string name="twitter_login">Login With Twitter</string>
    <string name="line_login">Login With Line</string>

    <string name="login_signup_q">New to SendU?</string>
    <string name="login_signup_t">Sign Up</string>

    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="contacts">Contacts</string>
    <string name="track">Track Delivery</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="logout_q">Are you sure you want to log out?</string>
    <string name="exit_q">Close app?</string>
    <string name="confirm">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="making">Making</string>
    <string name="moving">Moving</string>
    <string name="arrive">Complete</string>

    <string name="term1"></string>
    <string name="term2"></string>
    <string name="term3"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
