<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/guillotine_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu_90" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/home_group"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_home_white_24dp" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/home" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_shopping_cart_white_24dp" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/order" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contacts_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_people_white_24dp" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/contacts" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/track_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_local_shipping_white_24dp"
            android:id="@+id/imageView" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/track" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_exit_to_app_white_24dp"/>

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/logout"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_divider_height" />

    <LinearLayout
        android:id="@+id/settings_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_settings_white_24dp" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/settings" />
    </LinearLayout>
</LinearLayout>