<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="sendyou.biz.senduandroid.activity.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:id="@+id/login_background"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="37.5"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:id="@+id/login_logo"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="37.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <sendyou.biz.senduandroid.widget.NanumBoldTextView
                android:text="SENDU"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15"
                android:textSize="24sp"
                android:gravity="center"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"/>
                <Button
                    android:id="@+id/google_login_button"
                    android:text="@string/google_login"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="70"
                    android:background="@drawable/google_login_button" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"/>
                <Button
                    android:id="@+id/facebook_login_button"
                    android:text="@string/facebook_login"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="70"
                    android:background="@drawable/facebook_login_button" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"/>
                <Button
                    android:id="@+id/twitter_login_button"
                    android:text="@string/twitter_login"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="70"
                    android:background="@drawable/twitter_login_button" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"/>

        </LinearLayout>

        <sendyou.biz.senduandroid.widget.NanumBoldTextView
            android:text="Copyright(c) 2016 SendU All rights reserved. "
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/copyright"
            android:layout_weight="5"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>